# cc2640r2f_pac

./: Cargo.toml  update.sh
src/: aon_batmon.rs  aon_event.rs  aon_ioc.rs  aon_rtc.rs  aon_sysctl.rs  aon_wuc.rs  aux_adi4.rs  aux_aiodio1.rs  aux_anaif.rs  aux_ddi0_osc.rs  aux_evctl.rs  aux_sce.rs  aux_smph.rs  aux_tdcif.rs  aux_timer.rs  aux_wuc.rs  ccfg.rs  cpu_dwt.rs  cpu_fpb.rs  cpu_itm.rs  cpu_scs.rs  cpu_tiprop.rs  cpu_tpiu.rs  crypto.rs  event.rs  fcfg1.rs  flash.rs  gpio.rs  gpt2.rs  i2c0.rs  i2s0.rs  ioc.rs  lib.rs  prcm.rs  rfc_dbell.rs  rfc_pwr.rs  rfc_rat.rs  smph.rs  ssi1.rs  trng.rs  (+4 more)
src/aon_batmon/: bat.rs  batmonp0.rs  batmonp1.rs  batupd.rs  ctl.rs  flashpumpp0.rs  iostrp0.rs  meascfg.rs  temp.rs  tempp0.rs  tempp1.rs  tempp2.rs  tempupd.rs
src/aon_event/: auxwusel.rs  evtomcusel.rs  mcuwusel.rs  rtcsel.rs
src/aon_ioc/: clk32kctl.rs  ioclatch.rs  iostrmax.rs  iostrmed.rs  iostrmin.rs
src/aon_rtc/: ch0cmp.rs  ch1capt.rs  ch1cmp.rs  ch2cmp.rs  ch2cmpinc.rs  chctl.rs  ctl.rs  evflags.rs  sec.rs  subsec.rs  subsecinc.rs  sync.rs
src/aon_sysctl/: pwrctl.rs  resetctl.rs  sleepctl.rs
src/aon_wuc/: auxcfg.rs  auxclk.rs  auxctl.rs  ctl0.rs  ctl1.rs  jtagcfg.rs  jtagusercode.rs  mcucfg.rs  mcuclk.rs  osccfg.rs  pwrstat.rs  rechargecfg.rs  rechargestat.rs  shutdown.rs
src/aux_adi4/: adc0.rs  adc1.rs  adcref0.rs  adcref1.rs  comp.rs  isrc.rs  mux0.rs  mux1.rs  mux2.rs  mux3.rs  mux4.rs
src/aux_aiodio0/: gpiodie.rs  gpiodout.rs  gpiodoutclr.rs  iomode.rs
src/aux_aiodio1/: gpiodin.rs  gpiodoutset.rs  gpiodouttgl.rs
src/aux_anaif/: adcctl.rs  (+4 more)
(+1023 files in other folders)
